[package]
name = "sandcrust"
version = "0.1.0"
authors = ["Benjamin Lamowski <benjamin@lamowski.net>"]

[lib]
name = "sandcrust"
path = "src/lib.rs"

[[bin]]
name = "sandstorm"
path = "src/sandstorm.rs"

[features]
# by default, catch signals
default = [ "catch_signals" ]
catch_signals = [ ]

[dependencies]
nix = "*"
libc = "*"
sandheap = { path = "../sandheap" }
bincode = "1.0.0-alpha6"
rustc-serialize = "*"
lazy_static = "*"
serde_derive = "*"
serde = "*"
chan-signal = "*"
chan = "*"
