[package]
name = "sandcrust"
version = "0.1.0"
authors = ["Benjamin Lamowski <benjamin@lamowski.net>"]
#repository = ""
#homepage = ""
#documentation =
keywords = [ "componentization", "compartmentalization", "sandbox", "sandboxing", "C"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Automatically execute wrapped functions in a sandboxed process."

[lib]
name = "sandcrust"
path = "src/lib.rs"

[[bin]]
name = "sandstorm"
path = "src/sandstorm.rs"

[features]
auto_respawn = [ ]

[dependencies]
nix = "0.8.0"
libc = "0.2.21"
sandheap = { path = "../sandheap" }
bincode = "1.0.0-alpha6"
lazy_static = "0.2.4"
serde_derive = "0.9.11"
serde = "0.9.11"
